--- a/client/assets/styles/css/custom.css
+++ b/client/assets/styles/css/custom.css
@@ -2,15 +2,93 @@
   background-color: #8cc152;
 }
 
+span.badge {
+  font-size: 14px;
+}
+
+.bg-info {
+  background-color: #56a5de;
+}
+
 div.search-form-inner.main-page {
-    padding: 15px;
+  padding: 15px;
 }
 
 .right {
-    float: right;
+  float: right;
 }
 
 .site-header {
-    /*box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.176);*/
-    border-bottom: 3px solid #e96c4c;
+  /*box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.176);*/
+  border-bottom: 3px solid #e96c4c;
 }
+
+.row.cities-row {
+  text-align: justify;
+}
+
+.row.cities-row a {
+  color: #414042;
+}
+
+.panel.with-nav-tabs .panel-heading {
+  padding: 5px 5px 0 5px;
+}
+
+.panel.with-nav-tabs .nav-tabs {
+  border-bottom: none;
+}
+
+.panel.with-nav-tabs .nav-justified {
+  margin-bottom: -1px;
+}
+
+/********************************************************************/
+/*** PANEL DEFAULT ***/
+.with-nav-tabs.panel-default .nav-tabs > li > a,
+.with-nav-tabs.panel-default .nav-tabs > li > a:hover,
+.with-nav-tabs.panel-default .nav-tabs > li > a:focus {
+  color: white;
+}
+
+.with-nav-tabs.panel-default .nav-tabs > .open > a,
+.with-nav-tabs.panel-default .nav-tabs > .open > a:hover,
+.with-nav-tabs.panel-default .nav-tabs > .open > a:focus,
+.with-nav-tabs.panel-default .nav-tabs > li > a:hover,
+.with-nav-tabs.panel-default .nav-tabs > li > a:focus {
+  color: white;
+  background-color: #fc7352;
+  border-color: transparent;
+}
+
+.with-nav-tabs.panel-default .nav-tabs > li.active > a,
+.with-nav-tabs.panel-default .nav-tabs > li.active > a:hover,
+.with-nav-tabs.panel-default .nav-tabs > li.active > a:focus {
+  color: #555;
+  background-color: #fff;
+  /*border-color: #ddd;*/
+  border-bottom-color: transparent;
+}
+
+.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu {
+  background-color: #f5f5f5;
+  /*border-color: #ddd;*/
+}
+
+.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a {
+  color: #777;
+}
+
+.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a:hover,
+.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > li > a:focus {
+  background-color: #ddd;
+}
+
+.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a,
+.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a:hover,
+.with-nav-tabs.panel-default .nav-tabs > li.dropdown .dropdown-menu > .active > a:focus {
+  color: #fff;
+  background-color: #555;
+}
+
+/********************************************************************/
