--- a/client/views/homepage.ejs
+++ b/client/views/homepage.ejs
@@ -53,6 +53,18 @@
 
         </div>
       </div>
+      <div class="accordion">
+        <div class="panel panel-default">
+          <div class="panel-heading" style="background-color: #e96c4c; padding-top: 5px; padding-bottom: 0;">
+              <h3 style="color:white; text-align: center; font-size: 20px;">АВТО ПО ТИПУ КУЗОВА</h3>
+          </div>
+          <div class="panel-body">
+
+         dasdsa
+          </div>
+
+        </div>
+      </div>
 
       <!--<a href="#" class="btn-default btn-sm btn"><i class="fa fa-refresh"></i> Reset search</a>
       <a href="#" class="btn-primary btn-sm btn"><i class="fa fa-folder-o"></i> Save search</a>-->
