--- a/client/views/layout.ejs
+++ b/client/views/layout.ejs
@@ -1,123 +1,135 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
+  <title><%= typeof title == 'undefined' ? 'New Sails App' : title %></title>
 
   <!-- Viewport mobile tag for sensible mobile support -->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 
-    <!--
-        Stylesheets and Preprocessors
-        ==============================
+  <!--
+      Stylesheets and Preprocessors
+      ==============================
 
-        You can always bring in CSS files manually with `<link>` tags, or asynchronously
-        using a solution like AMD (RequireJS).  Or, if you like, you can take advantage
-        of Sails' conventional asset pipeline (boilerplate Gruntfile).
+      You can always bring in CSS files manually with `<link>` tags, or asynchronously
+      using a solution like AMD (RequireJS).  Or, if you like, you can take advantage
+      of Sails' conventional asset pipeline (boilerplate Gruntfile).
 
-        By default, stylesheets from your `assets/styles` folder are included
-        here automatically (between STYLES and STYLES END). Both CSS (.css) and LESS (.less)
-        are supported. In production, your styles will be minified and concatenated into
-        a single file.
-
-        To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
-        For example, here are a few things you could do:
-
-            + Change the order of your CSS files
-            + Import stylesheets from other directories
-            + Use a different or additional preprocessor, like SASS, SCSS or Stylus
-          -->
-
-          <!--STYLES-->
-          <link rel="stylesheet" href="/styles/css/animations.css">
-          <link rel="stylesheet" href="/styles/css/bootstrap-theme.css">
-          <link rel="stylesheet" href="/styles/css/bootstrap.css">
-          <link rel="stylesheet" href="/styles/css/custom.css">
-          <link rel="stylesheet" href="/styles/css/extralayers.css">
-          <link rel="stylesheet" href="/styles/css/font-awesome.css">
-          <link rel="stylesheet" href="/styles/css/ie.css">
-          <link rel="stylesheet" href="/styles/css/line-icons.css">
-          <link rel="stylesheet" href="/styles/css/navstylechange.css">
-          <link rel="stylesheet" href="/styles/css/style.css">
-          <link rel="stylesheet" href="/styles/colors/color1.css">
-          <!--STYLES END-->
-        </head>
-
-        <body class="home header-v3">
-          <div class="body">
-            <% include partials/header.ejs %>
-            <% include partials/search_form.ejs %>
-
-            <div class="main" role="main">
-              <div id="content" class="content full padding-b0">
-                <%- body %>
-              </div>
-            </div>
-
-            <% include partials/footer.ejs %>
-            <a id="back-to-top"><i class="fa fa-angle-double-up"></i></a>
-          </div>
-
-    <!--
-        Client-side Templates
-        ========================
-
-        HTML templates are important prerequisites of modern, rich client applications.
-        To work their magic, frameworks like Backbone, Angular, Ember, and Knockout require
-        that you load these templates client-side.
-
-        By default, your Gruntfile is configured to automatically load and precompile
-        client-side JST templates in your `assets/templates` folder, then
-        include them here automatically (between TEMPLATES and TEMPLATES END).
-
-        To customize this behavior to fit your needs, just edit `tasks/pipeline.js`.
-        For example, here are a few things you could do:
-
-            + Import templates from other directories
-            + Use a different template engine (handlebars, jade, dust, etc.)
-            + Internationalize your client-side templates using a server-side
-              stringfile before they're served.
-            -->
-
-            <!--TEMPLATES-->
-            
-            <!--TEMPLATES END-->
-
-
-    <!--
-
-      Client-side Javascript
-      ========================
-
-      You can always bring in JS files manually with `script` tags, or asynchronously
-      on the client using a solution like AMD (RequireJS).  Or, if you like, you can
-      take advantage of Sails' conventional asset pipeline (boilerplate Gruntfile).
-
-      By default, files in your `assets/js` folder are included here
-      automatically (between SCRIPTS and SCRIPTS END).  Both JavaScript (.js) and
-      CoffeeScript (.coffee) are supported. In production, your scripts will be minified
-      and concatenated into a single file.
+      By default, stylesheets from your `assets/styles` folder are included
+      here automatically (between STYLES and STYLES END). Both CSS (.css) and LESS (.less)
+      are supported. In production, your styles will be minified and concatenated into
+      a single file.
 
       To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
       For example, here are a few things you could do:
 
-          + Change the order of your scripts
-          + Import scripts from other directories
-          + Use a different preprocessor, like TypeScript
-
+          + Change the order of your CSS files
+          + Import stylesheets from other directories
+          + Use a different or additional preprocessor, like SASS, SCSS or Stylus
         -->
 
-        <!--SCRIPTS-->
-        <script src="/js/dependencies/sails.io.js"></script>
-        <script src="/js/dependencies/jquery-2.2.4.min.js"></script>
-        <script src="/js/dependencies/bootstrap.js"></script>
-        <script src="/js/helper-plugins.js"></script>
-        <script src="/js/init.js"></script>
-        <script src="/js/modernizr.js"></script>
-        <script src="/js/ui-plugins.js"></script>
-        <script src="/js/vendor/prettyphoto/js/prettyphoto-v3.1.5.js"></script>
-        <script src="/js/vendor/prettyphoto/js/prettyphoto.js"></script>
-        <script src="/js/waypoints.js"></script>
-        <!--SCRIPTS END-->
-      </body>
-      </html>
+  <!--STYLES-->
+  <link rel="stylesheet" href="/styles/css/animations.css">
+  <link rel="stylesheet" href="/styles/css/bootstrap-theme.css">
+  <link rel="stylesheet" href="/styles/css/bootstrap.css">
+  <link rel="stylesheet" href="/styles/css/custom.css">
+  <link rel="stylesheet" href="/styles/css/extralayers.css">
+  <link rel="stylesheet" href="/styles/css/font-awesome.css">
+  <link rel="stylesheet" href="/styles/css/ie.css">
+  <link rel="stylesheet" href="/styles/css/line-icons.css">
+  <link rel="stylesheet" href="/styles/css/navstylechange.css">
+  <link rel="stylesheet" href="/styles/css/style.css">
+  <link rel="stylesheet" href="/js/vendor/flexslider/css/flexslider.css">
+  <link rel="stylesheet" href="/js/vendor/owl-carousel/css/owl.carousel.css">
+  <link rel="stylesheet" href="/js/vendor/owl-carousel/css/owl.theme.css">
+  <link rel="stylesheet" href="/js/vendor/prettyphoto/css/prettyPhoto.css">
+  <link rel="stylesheet" href="/js/vendor/revslider/css/settings-ie8.css">
+  <link rel="stylesheet" href="/js/vendor/revslider/css/settings.css">
+  <link rel="stylesheet" href="/styles/colors/color1.css">
+  <!--STYLES END-->
+</head>
+
+<body class="home header-v3">
+<div class="body">
+  <% include partials/header.ejs %>
+
+  <!--            <div class="main" role="main">
+                <div id="content" class="content full padding-b0">-->
+  <%- body %>
+  <!--</div>
+</div>-->
+
+  <% include partials/footer.ejs %>
+  <a id="back-to-top"><i class="fa fa-angle-double-up"></i></a>
+</div>
+
+<!--
+    Client-side Templates
+    ========================
+
+    HTML templates are important prerequisites of modern, rich client applications.
+    To work their magic, frameworks like Backbone, Angular, Ember, and Knockout require
+    that you load these templates client-side.
+
+    By default, your Gruntfile is configured to automatically load and precompile
+    client-side JST templates in your `assets/templates` folder, then
+    include them here automatically (between TEMPLATES and TEMPLATES END).
+
+    To customize this behavior to fit your needs, just edit `tasks/pipeline.js`.
+    For example, here are a few things you could do:
+
+        + Import templates from other directories
+        + Use a different template engine (handlebars, jade, dust, etc.)
+        + Internationalize your client-side templates using a server-side
+          stringfile before they're served.
+        -->
+
+<!--TEMPLATES-->
+
+<!--TEMPLATES END-->
+
+
+<!--
+
+  Client-side Javascript
+  ========================
+
+  You can always bring in JS files manually with `script` tags, or asynchronously
+  on the client using a solution like AMD (RequireJS).  Or, if you like, you can
+  take advantage of Sails' conventional asset pipeline (boilerplate Gruntfile).
+
+  By default, files in your `assets/js` folder are included here
+  automatically (between SCRIPTS and SCRIPTS END).  Both JavaScript (.js) and
+  CoffeeScript (.coffee) are supported. In production, your scripts will be minified
+  and concatenated into a single file.
+
+  To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
+  For example, here are a few things you could do:
+
+      + Change the order of your scripts
+      + Import scripts from other directories
+      + Use a different preprocessor, like TypeScript
+
+    -->
+
+<!--SCRIPTS-->
+<script src="/js/dependencies/sails.io.js"></script>
+<script src="/js/dependencies/jquery-2.2.4.min.js"></script>
+<script src="/js/dependencies/bootstrap.js"></script>
+<script src="/js/helper-plugins.js"></script>
+<script src="/js/init.js"></script>
+<script src="/js/modernizr.js"></script>
+<script src="/js/ui-plugins.js"></script>
+<script src="/js/vendor/flexslider/js/jquery.flexslider.js"></script>
+<script src="/js/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+<script src="/js/vendor/password-checker.js"></script>
+<script src="/js/vendor/prettyphoto/js/prettyphoto-v3.1.5.js"></script>
+<script src="/js/vendor/prettyphoto/js/prettyphoto.js"></script>
+<script src="/js/vendor/revslider/js/jquery.themepunch.enablelog.js"></script>
+<script src="/js/vendor/revslider/js/jquery.themepunch.revolution.js"></script>
+<script src="/js/vendor/revslider/js/jquery.themepunch.revolution.min.js"></script>
+<script src="/js/vendor/revslider/js/jquery.themepunch.tools.min.js"></script>
+<script src="/js/waypoints.js"></script>
+<!--SCRIPTS END-->
+</body>
+</html>
