--- a/client/views/description.ejs
+++ b/client/views/description.ejs
@@ -5,7 +5,7 @@
       <article class="single-vehicle-details">
         <div class="single-vehicle-title">
           <span class="badge-premium-listing">Premium listing</span>
-          <h2 class="post-title">Nissan Terrano single hand driven</h2>
+          <h2 class="post-title"><%=item.attributes.page_heading.value[0]%></h2>
         </div>
         <div class="single-listing-actions">
           <div class="btn-group pull-right" role="group">
@@ -24,33 +24,31 @@
             <a href="javascript:void(0)" onclick="window.print();" class="btn btn-default" title="Print"><i
                 class="fa fa-print"></i> <span>Print</span></a>
           </div>
-          <div class="btn btn-info price">$88000</div>
+          <div class="btn btn-info price">$<%=item.attributes.price.value[0]%></div>
         </div>
         <div class="row">
           <div class="col-md-8">
             <div class="single-listing-images">
               <div class="featured-image format-image">
-                <a href="http://placehold.it/890x600&amp;text=IMAGE+PLACEHOLDER" data-rel="prettyPhoto[gallery]"
-                   class="media-box"><img src="http://placehold.it/890x600&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
+                <a style="text-align: center;" href="<%=item.attributes.photo.value[0]%>" data-rel="prettyPhoto[gallery]"
+                   class="media-box"><img src="<%=item.attributes.photo.value[0]%>" alt=""></a>
               </div>
               <div class="additional-images">
                 <ul class="owl-carousel" data-columns="4" data-pagination="no" data-arrows="yes" data-single-item="no"
                     data-items-desktop="4" data-items-desktop-small="4" data-items-tablet="3" data-items-mobile="3">
-                  <li class="item format-video"><a href="https://www.youtube.com/watch?v=P5mvnA4BV7Y"
+
+                  <% item.attributes.photo.value.forEach(function(photo, i) { %>
+                  <%if (i<10) { %>
+                      <li class="item format-image"><a href="<%=photo%>" data-rel="prettyPhoto[gallery]" class="media-box">
+                      <img src="<%=photo%>" alt=""></a></li>
+                  <% } %>
+                  <% }); %>
+
+
+<!--                  <li class="item format-image"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER"
                                                    data-rel="prettyPhoto[gallery]" class="media-box"><img
-                        src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
-                  <li class="item format-image"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER"
-                                                   data-rel="prettyPhoto[gallery]" class="media-box"><img
-                        src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
-                  <li class="item format-image"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER"
-                                                   data-rel="prettyPhoto[gallery]" class="media-box"><img
-                        src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
-                  <li class="item format-image"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER"
-                                                   data-rel="prettyPhoto[gallery]" class="media-box"><img
-                        src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
-                  <li class="item format-image"><a href="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER"
-                                                   data-rel="prettyPhoto[gallery]" class="media-box"><img
-                        src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>
+                        src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a></li>-->
+
                 </ul>
               </div>
             </div>
