--- a/client/views/description.ejs
+++ b/client/views/description.ejs
@@ -276,11 +276,8 @@
               <div class="listing-container">
                 <div class="carousel-wrapper">
                   <div class="row">
-                    <ul class="owl-carousel carousel-fw" id="vehicle-slider" data-columns="3" data-autoplay=""
-                        data-pagination="yes" data-arrows="no" data-single-item="no" data-items-desktop="3"
-                        data-items-desktop-small="3" data-items-tablet="2" data-items-mobile="1">
-                      <li class="item">
-                        <div class="vehicle-block format-standard">
+                    <div class="col-md-4">
+                      <div class="vehicle-block format-standard">
                           <a href="#" class="media-box"><img
                               src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
                           <span class="label label-default vehicle-age">2014</span>
@@ -292,48 +289,9 @@
                               src="images/body-types/sedan.png" width="30" alt=""></a>
                           <span class="vehicle-cost">$48500</span>
                         </div>
-                      </li>
-                      <li class="item">
-                        <div class="vehicle-block format-standard">
-                          <a href="#" class="media-box"><img
-                              src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
-                          <span class="label label-primary vehicle-age">Brand New</span>
-                          <h5 class="vehicle-title"><a href="#">Nissan Terrano first hand</a></h5>
-                          <span class="vehicle-meta">Nissan, Brown beige, by <abbr class="user-type"
-                                                                                   title="Listed by an dealer">Dealer</abbr></span>
-                          <a href="#" title="View all SUVs" class="vehicle-body-type"><img
-                              src="images/body-types/suv.png" width="30" alt=""></a>
-                          <span class="vehicle-cost">$28000</span>
-                        </div>
-                      </li>
-                      <li class="item">
-                        <div class="vehicle-block format-standard">
-                          <a href="#" class="media-box"><img
-                              src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
-                          <span class="label label-default vehicle-age">2013</span>
-                          <h5 class="vehicle-title"><a href="#">Mercedes Benz E Class</a></h5>
-                          <span class="vehicle-meta">Mercedes, Silver Blue, by <abbr class="user-type"
-                                                                                     title="Listed by an individual">Individual</abbr></span>
-                          <a href="#" title="View all convertibles" class="vehicle-body-type"><img
-                              src="images/body-types/convertible.png" width="30" alt=""></a>
-                          <span class="vehicle-cost">$76000</span>
-                        </div>
-                      </li>
-                      <li class="item">
-                        <div class="vehicle-block format-standard">
-                          <a href="#" class="media-box"><img
-                              src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
-                          <span class="label label-default vehicle-age">2014</span>
-                          <h5 class="vehicle-title"><a href="#">Newly launched Nissan Sunny</a></h5>
-                          <span class="vehicle-meta">Nissan, Brown beige, by <abbr class="user-type"
-                                                                                   title="Listed by Autostars">Autostars</abbr></span>
-                          <a href="#" title="View all coupes" class="vehicle-body-type"><img
-                              src="images/body-types/coupe.png" width="30" alt=""></a>
-                          <span class="vehicle-cost">$31999</span>
-                        </div>
-                      </li>
-                      <li class="item">
-                        <div class="vehicle-block format-standard">
+                    </div>
+                    <div class="col-md-4">
+                      <div class="vehicle-block format-standard">
                           <a href="#" class="media-box"><img
                               src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
                           <span class="label label-default vehicle-age">2014</span>
@@ -345,52 +303,69 @@
                               src="images/body-types/sedan.png" width="30" alt=""></a>
                           <span class="vehicle-cost">$48500</span>
                         </div>
-                      </li>
-                      <li class="item">
-                        <div class="vehicle-block format-standard">
-                          <a href="#" class="media-box"><img
-                              src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
-                          <span class="label label-primary vehicle-age">Brand New</span>
-                          <h5 class="vehicle-title"><a href="#">Nissan Terrano first hand</a></h5>
-                          <span class="vehicle-meta">Nissan, Brown beige, by <abbr class="user-type"
-                                                                                   title="Listed by an dealer">Dealer</abbr></span>
-                          <a href="#" title="View all SUVs" class="vehicle-body-type"><img
-                              src="images/body-types/suv.png" width="30" alt=""></a>
-                          <span class="vehicle-cost">$28000</span>
-                        </div>
-                      </li>
-                      <li class="item">
-                        <div class="vehicle-block format-standard">
-                          <a href="#" class="media-box"><img
-                              src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
-                          <span class="label label-default vehicle-age">2013</span>
-                          <h5 class="vehicle-title"><a href="#">Mercedes Benz E Class</a></h5>
-                          <span class="vehicle-meta">Mercedes, Silver Blue, by <abbr class="user-type"
-                                                                                     title="Listed by an individual">Individual</abbr></span>
-                          <a href="#" title="View all convertibles" class="vehicle-body-type"><img
-                              src="images/body-types/convertible.png" width="30" alt=""></a>
-                          <span class="vehicle-cost">$76000</span>
-                        </div>
-                      </li>
-                      <li class="item">
-                        <div class="vehicle-block format-standard">
+                    </div>
+                    <div class="col-md-4">
+                      <div class="vehicle-block format-standard">
                           <a href="#" class="media-box"><img
                               src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
                           <span class="label label-default vehicle-age">2014</span>
-                          <h5 class="vehicle-title"><a href="#">Newly launched Nissan Sunny</a></h5>
-                          <span class="vehicle-meta">Nissan, Brown beige, by <abbr class="user-type"
-                                                                                   title="Listed by Autostars">Autostars</abbr></span>
-                          <a href="#" title="View all coupes" class="vehicle-body-type"><img
-                              src="images/body-types/coupe.png" width="30" alt=""></a>
-                          <span class="vehicle-cost">$31999</span>
+                          <span class="label label-success premium-listing">Premium Listing</span>
+                          <h5 class="vehicle-title"><a href="#">Mercedes-benz SL 300</a></h5>
+                          <span class="vehicle-meta">Mercedes, Grey color, by <abbr class="user-type"
+                                                                                    title="Listed by an individual user">Individual</abbr></span>
+                          <a href="#" title="View all Sedans" class="vehicle-body-type"><img
+                              src="images/body-types/sedan.png" width="30" alt=""></a>
+                          <span class="vehicle-cost">$48500</span>
                         </div>
-                      </li>
-                    </ul>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="vehicle-block format-standard">
+                          <a href="#" class="media-box"><img
+                              src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
+                          <span class="label label-default vehicle-age">2014</span>
+                          <span class="label label-success premium-listing">Premium Listing</span>
+                          <h5 class="vehicle-title"><a href="#">Mercedes-benz SL 300</a></h5>
+                          <span class="vehicle-meta">Mercedes, Grey color, by <abbr class="user-type"
+                                                                                    title="Listed by an individual user">Individual</abbr></span>
+                          <a href="#" title="View all Sedans" class="vehicle-body-type"><img
+                              src="images/body-types/sedan.png" width="30" alt=""></a>
+                          <span class="vehicle-cost">$48500</span>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="vehicle-block format-standard">
+                          <a href="#" class="media-box"><img
+                              src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
+                          <span class="label label-default vehicle-age">2014</span>
+                          <span class="label label-success premium-listing">Premium Listing</span>
+                          <h5 class="vehicle-title"><a href="#">Mercedes-benz SL 300</a></h5>
+                          <span class="vehicle-meta">Mercedes, Grey color, by <abbr class="user-type"
+                                                                                    title="Listed by an individual user">Individual</abbr></span>
+                          <a href="#" title="View all Sedans" class="vehicle-body-type"><img
+                              src="images/body-types/sedan.png" width="30" alt=""></a>
+                          <span class="vehicle-cost">$48500</span>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="vehicle-block format-standard">
+                          <a href="#" class="media-box"><img
+                              src="http://placehold.it/600x400&amp;text=IMAGE+PLACEHOLDER" alt=""></a>
+                          <span class="label label-default vehicle-age">2014</span>
+                          <span class="label label-success premium-listing">Premium Listing</span>
+                          <h5 class="vehicle-title"><a href="#">Mercedes-benz SL 300</a></h5>
+                          <span class="vehicle-meta">Mercedes, Grey color, by <abbr class="user-type"
+                                                                                    title="Listed by an individual user">Individual</abbr></span>
+                          <a href="#" title="View all Sedans" class="vehicle-body-type"><img
+                              src="images/body-types/sedan.png" width="30" alt=""></a>
+                          <span class="vehicle-cost">$48500</span>
+                        </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </section>
           </div>
+          
           <!-- Vehicle Details Sidebar -->
           <div class="col-md-4 vehicle-details-sidebar sidebar">
 
@@ -423,40 +398,6 @@
               </div>
             </div>
 
-            <!-- Financing Calculator -->
-            <div class="sidebar-widget widget calculator-widget">
-              <h4>Loan Estimator</h4>
-              <form>
-                <div class="loan-calculations">
-                  <input type="text" class="form-control" placeholder="Loan amount">
-                  <div class="form-group">
-                    <label>Loan term in months</label>
-                    <div class="btn-group" data-toggle="buttons">
-                      <label class="btn btn-info active">
-                        <input type="radio" name="Loan Tenure" id="option1" autocomplete="off" checked> 24
-                      </label>
-                      <label class="btn btn-info">
-                        <input type="radio" name="Loan Tenure" id="option2" autocomplete="off"> 36
-                      </label>
-                      <label class="btn btn-info">
-                        <input type="radio" name="Loan Tenure" id="option3" autocomplete="off"> 48
-                      </label>
-                      <label class="btn btn-info">
-                        <input type="radio" name="Loan Tenure" id="option3" autocomplete="off"> 60
-                      </label>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Down payment">
-                    <input type="text" class="form-control" placeholder="Rate of Interest eg.10%">
-                  </div>
-                </div>
-                <div class="calculations-result">
-                  <span class="meta-data">This is the payment you need to make per month</span>
-                  <span class="loan-amount">$300<small>/month</small></span>
-                </div>
-              </form>
-            </div>
           </div>
         </div>
       </article>
