--- a/parser/views/item_test.ejs
+++ b/parser/views/item_test.ejs
@@ -1,4 +1,5 @@
-<div class="btn-group btn-group-justified item-functions" id='<%= item.id %>'>
+<div class="card-box">
+<div class="btn-group btn-group-justified item-functions" id="<%=item.id%>">
     <a id='test_source' class="btn btn-primary col-sm-3">
         <i class="glyphicon glyphicon-cloud default-icon"></i>
         <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate loading-icon" style="display: none;"></span>
@@ -57,4 +58,5 @@
         <a href="#" class='parsed_item_href' target="_black">Ссылка на Item</a>
         <pre class='parsed_item_obj'></pre>
     </div> -->
+</div>
 </div>
