--- a/client/views/partials/header.ejs
+++ b/client/views/partials/header.ejs
@@ -9,42 +9,10 @@
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
                 <div class="dd-menu toggle-menu">
-                    <ul class="sf-menu">
-                        <li><a href="javascript:void(0)">Home</a>
-                            <ul class="dropdown">
-                                <li><a href="javascript:void(0)">Home versions</a>
-                                    <ul class="dropdown">
-                                        <li><a href="index.html">Default</a></li>
-                                        <li><a href="index2.html">Version 2</a></li>
-                                        <li><a href="index3.html">Version 3</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="javascript:void(0)">Slider versions</a>
-                                    <ul class="dropdown">
-                                        <li><a href="index.html">Default(Flexslider)</a></li>
-                                        <li><a href="index-revslider.html">Slider Revolution <span class="label label-danger">New</span></a></li>
-                                        <li><a href="banner-slider.html">Banner Slider</a></li>
-                                        <li><a href="hero-carousel.html">Full Screen Carousel</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="javascript:void(0)">Search Form Positions</a>
-                                    <ul class="dropdown">
-                                        <li><a href="index.html">Default(With Main Menu)</a></li>
-                                        <li><a href="search-below-slider.html">Below Slider</a></li>
-                                        <li><a href="search-over-slider.html">Over Slider</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="javascript:void(0)">Header versions</a>
-                                    <ul class="dropdown">
-                                        <li><a href="index.html">Default</a>
-                                        <li><a href="header-v2.html">Version 2</a></li>
-                                        <li><a href="header-v3.html">Version 3</a></li>
-                                        <li><a href="header-v4.html">Version 4</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
+                    <ul class="sf-menu" style="te">
+                        <li><a href="/">Главная</a>
                         </li>
-                        <li><a href="javascript:void(0)">Pages</a>
+<!--                         <li><a href="javascript:void(0)">Pages</a>
                             <ul class="dropdown">
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
@@ -139,7 +107,7 @@
                                 <li><a href="single-post.html">Single Post</a></li>
                                 <li><a href="single-post-review.html">Single Review Post</a></li>
                             </ul>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <a href="#" class="visible-sm visible-xs" id="menu-toggle"><i class="fa fa-bars"></i></a>
