--- a/parser/views/items_list.ejs
+++ b/parser/views/items_list.ejs
@@ -1,3 +1,4 @@
+<div class="card-box">
 <h1>Список сайтов для парсинга</h1>
 <div class="table-responsive">
     <table id="mytable" class="table table-bordred table-striped">
@@ -38,4 +39,5 @@
         <li><a href="#">5</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-chevron-right"></span></a></li>
     </ul> -->
+</div>
 </div>
