--- a/parser/views/controls/index.ejs
+++ b/parser/views/controls/index.ejs
@@ -1,1 +1,3 @@
-dasdasdsa
+<div class="card-box">
+	<button type="button" id='start_parse' class="btn btn-default waves-effect waves-light">Запустить парсер</button>		
+</div>
