--- a/parser/views/item_parse.ejs
+++ b/parser/views/item_parse.ejs
@@ -42,11 +42,17 @@
                     </div>
                 </div>
                 <div class="col-md-12">
-                    <div class="checkbox">
+                    <div class="checkbox checkbox-primary">
+                    <input id="checkbox2" type="checkbox" name='delete_file' value="true">
+                        <label for="checkbox2">
+                             Удалить файл
+                        </label>
+                    </div>
+                    <!-- <div class="checkbox">
                         <label>
                             <input type="checkbox" name='delete_file' value="true"> Удалить файл
                         </label>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </form>
