--- a/parser/views/layouts/layout.ejs
+++ b/parser/views/layouts/layout.ejs
@@ -82,8 +82,12 @@
         <script src="/assets/js/scripts.js"></script>
         <script src="/assets/js/test_scripts.js"></script>
 
-        <!-- <script src="/assets/js/jquery.core.js"></script>
-        <script src="/assets/js/jquery.app.js"></script> -->
+
+        <script src="/assets/plugins/notifyjs/dist/notify.min.js"></script>
+        <script src="/assets/plugins/notifications/notify-metro.js"></script>
+
+        <script src="/assets/js/jquery.core.js"></script>
+        <script src="/assets/js/jquery.app.js"></script>
 
     </body>
 </html>
