--- a/parser/views/controls/index.ejs
+++ b/parser/views/controls/index.ejs
@@ -1,3 +1,4 @@
 <div class="card-box">
 	<button type="button" id='start_parse' class="btn btn-default waves-effect waves-light">Запустить парсер</button>		
+	<button type="button" id='convert_json' class="btn btn-default waves-effect waves-light">Конверт</button>		
 </div>
