--- a/parser/views/layouts/layout.ejs
+++ b/parser/views/layouts/layout.ejs
@@ -9,14 +9,11 @@
 
     <title>SB Admin - Bootstrap Admin Template</title>
 
-    <!-- Bootstrap Core CSS -->
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="/assets/css/sb-admin.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
+    <link href="/assets/css/custom.css" rel="stylesheet">
     <link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 
 
 </head>
